feat: module sub categories (CRUD)
